need to fix spacing

--- a/public/screen.css
+++ b/public/screen.css
@@ -28,10 +28,18 @@ h1 {
 .kitteh {
   border: 1px solid deepskyblue;
   padding: 3px;
+  margin: 10px;
 }
 
 body {
   margin: 0;
   min-height: 100%;
   background-color: lightcyan;
+}
+.main {
+  display: flex;
+  flex-direction: row;
+}
+.post {
+  margin: 0px 20px;
 }
